# cs4750project

./: .dockerignore  Dockerfile  README.md  fly.toml  initial_tables.sql
backend/: .gitignore  Dockerfile  README.md  initial_tables.sql  pyproject.toml  requirements.txt
backend/src/: main.py  util.py
backend/src/model/: models.py  puzzles.py
backend/src/routers/: attempts.py  puzzles.py  ratings.py  users.py
backend/tests/: conftest.py  test_health.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AttemptsTable.tsx  Button.tsx  Header.tsx  Paragraph.tsx  PuzzleLink.tsx  PuzzleTable.tsx  RatingsTable.tsx  Subheading.tsx  Timer.tsx  Title.tsx  UserLink.tsx  UserTable.tsx
frontend/src/components/Button/: Button.css  index.tsx
frontend/src/components/Layout/: WithNavbar.tsx
frontend/src/components/Navbar/: AuthWidget.tsx  index.css  index.tsx
frontend/src/components/Puzzle/: Connections.tsx
frontend/src/components/PuzzleIcon/: index.tsx
frontend/src/components/PuzzleTable/: index.tsx
frontend/src/components/Puzzles/: PuzzleLink.tsx  PuzzleStats.tsx
frontend/src/components/StarRating/: index.tsx
frontend/src/components/Tables/: AttemptsTable.tsx  PuzzleTable.tsx  RatingsTable.tsx  UserTable.tsx
frontend/src/hooks/: useAuth.ts  useConnections.ts  useGet.ts  usePuzzle.ts
frontend/src/pages/: CreatePuzzlePage.tsx  EditPuzzlePage.tsx  HomePage.tsx  LeaderboardPage.tsx  PuzzlePage.tsx  UserPage.tsx
frontend/src/util/: constants.ts  date.ts  types.ts
(+23 files in other folders)
