[project]
name = "cs4750project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]